@@ -10,6 +10,8 @@ Change log for zeit.web
   * Add timing metrics for solr
   * Add timing metrics for memcache
 
+- FIX: Be more defensive about unresolveable entries and their images in feeds
+
 
 2.11 (2015-10-07)
 -----------------
